<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contra_loginactivity_contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosansbolditalic"
        android:text="@string/titulo_app"
        android:textColor="@android:color/black"
        android:textSize="@dimen/titulo_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosansregular"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="@dimen/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_loginactivity_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/textfiel_login_height"
        android:layout_marginTop="15dp"
        android:hint="@string/textfield_loginactivity_email"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconCheckable="true"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/color_icon_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosansitalic"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_loginactivity_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/textfiel_login_height"
        android:hint="@string/textfield_loginactivity_password"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textfield_loginactivity_email"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/color_icon_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosansitalic"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_loginactivity_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosansitalic"
        android:text="@string/text_loginactivity_olvidopassword"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_login_olvidopassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textfield_loginactivity_password" />

    <Button
        android:id="@+id/button_loginactivity_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttom_login_heigh"
        android:elevation="20dp"
        android:fontFamily="@font/notosansbolditalic"
        android:text="@string/button_loginactivity_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/buton_login_texto"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/text_loginactivity_recuperar"
        app:layout_constraintVertical_bias="1.0"
        app:shapeAppearanceOverlay="@style/button_redondo" />

    <ImageView
        android:id="@+id/img_loginactivity_facebook"
        android:layout_width="@dimen/icon_tamano"
        android:layout_height="@dimen/icon_tamano"
        app:layout_constraintBottom_toBottomOf="@+id/img_loginactivity_google"
        app:layout_constraintEnd_toStartOf="@+id/img_loginactivity_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/img_loginactivity_google"
        android:layout_width="@dimen/icon_tamano"
        android:layout_height="@dimen/icon_tamano"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/img_loginactivity_twitter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_loginactivity_facebook"
        app:layout_constraintTop_toBottomOf="@+id/button_loginactivity_login"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/img_loginactivity_twitter"
        android:layout_width="@dimen/icon_tamano"
        android:layout_height="@dimen/icon_tamano"
        app:layout_constraintBottom_toBottomOf="@+id/img_loginactivity_google"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_loginactivity_google"
        app:srcCompat="@drawable/ic_twitter" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosansitalic"
        android:text="@string/text_loginactivity_notienecuenta"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/text_loginactivity_registrarse"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/img_loginactivity_google" />

    <TextView
        android:id="@+id/text_loginactivity_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosansbolditalic"
        android:text="@string/text_loginactivity_notienecuenta2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/img_loginactivity_google" />

</androidx.constraintlayout.widget.ConstraintLayout>